--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -1,17 +1,15 @@
 <div class="row">
-  <div class="col-md-3 col-sm-6">
+  <div *ngFor="let gif of gifList" class="col-md-3 col-sm-6">
     <div class="card mb-2 text-center bg-dark">
+      <img
+        [src]="gif.images.downsized_medium.url"
+        [alt]="gif.title"
+        class="card-img-top"
+      />
+
       <div class="card-body text-white">
-        <p class="card-text">Card title</p>
+        <p class="card-text">{{ gif.title }}</p>
       </div>
     </div>
   </div>
 </div>
-
-<ul>
-  <li>First</li>
-  <li>Second</li>
-  <li>Third</li>
-  <li>Fourth</li>
-  <li>Fifth</li>
-</ul>
