--- a/src/app/gifs/components/card-list/card-list.component.html
+++ b/src/app/gifs/components/card-list/card-list.component.html
@@ -2,6 +2,6 @@
   <gifs-element-card
     *ngFor="let gif of gifList"
     [gif]="gif"
-    class="col-md-3 col-sm-6"
+    class="col-md-3 col-sm-6 pt-1 pb-1"
   ></gifs-element-card>
 </div>
