--- a/src/app/gifs/components/element-card/element-card.component.html
+++ b/src/app/gifs/components/element-card/element-card.component.html
@@ -4,13 +4,7 @@
     [alt]="gif.title || 'No title'"
   ></shared-lazy-image>
 
-  <!-- <img
-    [src]="gif.images.downsized_medium.url"
-    [alt]="gif.title"
-    class="card-img-top"
-  /> -->
-
-  <div class="card-body text-white">
+  <div class="card-body text-white p-2">
     <p class="card-text">{{ gif.title || "No title" }}</p>
   </div>
 </div>
