--- a/src/app/gifs/components/search-box/search-box.component.html
+++ b/src/app/gifs/components/search-box/search-box.component.html
@@ -1,8 +1,8 @@
-<h5>Shearch item</h5>
+<h5>Shearch Gifs</h5>
 
 <input
   type="text"
-  placeholder="Shearch gifs"
+  placeholder="Gif name"
   #txtSearchInput
   (keyup.enter)="searchItem()"
   class="form-control"
