--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,8 +1,4 @@
-<div
-  id="sidebar"
-  class="bg-dark border-right p-3"
-  style="height: 100vh; width: 250px"
->
+<div id="sidebar" class="bg-dark border-right p-3">
   <h3 class="text-light">GifsApp</h3>
 
   <hr class="text-white" />
