--- a/src/app/shared/components/sidebar/sidebar.component.css
+++ b/src/app/shared/components/sidebar/sidebar.component.css
@@ -1,10 +1,25 @@
 #sidebar {
-  width: 250px;
+  width: 200px;
   height: 100%;
 }
 
-@media (max-width: 450px) {
+@media all and (min-width: 1349px) and (max-width: 1920px) {
+}
+
+@media all and (min-width: 1280px) and (max-width: 1349px) {
+}
+
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+}
+
+@media all and (min-width: 480px) and (max-width: 768px) {
+}
+
+@media all and (max-width: 480px) {
   #sidebar {
-    width: 200px;
+    width: 180px;
   }
 }
